--- a/index.html
+++ b/index.html
@@ -43,30 +43,23 @@
         </ul>
         <p>我们不会收集您的个人身份信息（如姓名、联系方式等）。</p>
 
-        <h2>3. 信息的存储与安全</h2>
-        <p>所有物品数据均存储在您的本地设备上，我们不会将您的数据上传到服务器。</p>
-        <p>我们采取合理的安全措施来保护您的数据，例如数据加密和设备本地存储优化。但请注意，任何存储方式都不能保证 100% 的安全性。</p>
+         <h2>3. 信息存储与安全</h2>
+    <p>您的数据将存储在本地设备上，同时我们提供 iCloud 作为可选的云端存储解决方案，以便您在多台设备间同步数据。</p>
+    <p>iCloud 由 Apple 提供服务，数据存储的安全性由 Apple 保障，具体信息请参考 Apple 的 <a href="https://www.apple.com/legal/privacy/">隐私政策</a>。</p>
 
-        <h2>4. 第三方服务</h2>
-        <p>本应用可能会集成第三方服务，例如：</p>
-        <ul>
-            <li>分析工具（如 Firebase 或其他统计工具）</li>
-            <li>云存储（如果您选择同步数据到云端，如 iCloud）</li>
-        </ul>
-        <p>请参考相应第三方的隐私政策，以了解他们如何处理您的数据。</p>
-
-        <h2>5. 您的权利</h2>
+        <h2>4. 您的权利</h2>
         <p>您可以随时执行以下操作：</p>
         <ul>
             <li>在应用内管理或删除您的数据</li>
             <li>卸载应用以彻底清除存储的数据</li>
+             <li>设备设置中管理 iCloud 备份。</li>
             <li>如有疑问，可联系我们获取更多信息</li>
         </ul>
 
-        <h2>6. 隐私政策的更新</h2>
+        <h2>5. 隐私政策的更新</h2>
         <p>我们可能会不时更新本隐私政策。更新后的隐私政策将在本页面公布，并立即生效。</p>
 
-        <h2>7. 联系我们</h2>
+        <h2>6. 联系我们</h2>
         <p>如果您对本隐私政策有任何疑问或建议，请通过以下方式联系我们：</p>
         <p>邮箱：nebula2021@foxmail.com</p>
     </div>
